--- a/.gitignore
+++ b/.gitignore
@@ -213,3 +213,13 @@ dmypy.json
 # End of https://www.toptal.com/developers/gitignore/api/django,python
 
 findme/keys/
+
+findme/findme/keys/
+
+findme/task/migrations/
+
+findme/diary/migrations/
+
+findme/counsel/migrations/
+
+findme/users/migrations/
