Modify: pos tagger (okt to mecab)
성능을 위해 형태소처리기를 okt에서 mecab-ko로 변경하였고, 한글자는 제외되도록 수정. mecab에서 한글 자모음이 출력되는 문제가 있어서 정규표현식으로 해결

--- a/findme/Dockerfile
+++ b/findme/Dockerfile
@@ -8,4 +8,5 @@ RUN apt-get update && \
 RUN apt-get install -y fonts-nanum
 RUN ls -l /usr/share/fonts/truetype/    
 RUN java -version
+RUN curl -L https://raw.githubusercontent.com/konlpy/konlpy/master/scripts/mecab.sh | bash
 ADD . /code/
