Modify: nginx buffer size

--- a/findme/nginx/nginx.conf
+++ b/findme/nginx/nginx.conf
@@ -4,9 +4,12 @@ server {
     }
 
     location /static/ {
-        alias /static/;
+        alias /static/; 
     }
 
     listen 80;
     server_name ec2-13-209-32-113.ap-northeast-2.compute.amazonaws.com;
+    client_max_body_size 100M;
+    client_body_buffer_size 256k;
 }
+
